style.css
body{
    font-family: 'Poppins', sans-serif;
    margin: 0px;
}
.orange-highlight{
    color: orange;
    
}
h1{
    font-size: 50px;
}
p{
    color: dimgray;
}
.half-width{
    width: 40%;
    float: left;
    margin-left: 5%;
    padding-left: 2%;
}
.half-width img{
    width: 100%;
}
.top-banner{
    background-image: url("images/top-banner.png");
    background-repeat: no-repeat;
}
section{
    height: 500px;
    padding-bottom: 150px;
}
.link-button{
    text-decoration: none;
    background-image: linear-gradient(45deg,tomato, lightsalmon);
    padding: 5px 20px;
    border-radius: 5px;
    color: white;
    font-weight: 700;
}
h2{
    font-size: 40px;
}
.dream-big{
    background-image: url("images/dream-bg.png");
    background-repeat: no-repeat;
    background-position: right;
}
.single-experience{
    box-shadow: 10px 10px 30px gray;
    border-radius: 10px;
    height: 80%;
    background-color: white;
}
.experience-area{
    background-image: url("images/exp-bg.png");
    background-repeat: no-repeat;
    background-position: left;
}
#full-stack{
    border-left: 7px solid;
    border-image: linear-gradient(180deg, tomato, lightsalmon);
    border-image-slice: 1;
}
#jr-dev{
    border-left: 7px solid;
    border-image: linear-gradient(180deg, blue, cyan);
    border-image-slice: 1;
}
footer{
    text-align: center;
}

